@@ -40,6 +40,14 @@ test {
     testLogging.showStandardStreams = true
     systemProperties System.properties
 
+
+    jvmArgs(
+            "--add-opens", "java.base/java.lang=ALL-UNNAMED",
+            "--add-opens", "java.base/java.util=ALL-UNNAMED",
+            "--add-opens", "java.base/java.io=ALL-UNNAMED",
+            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED"
+    )
+
     if (project.hasProperty('environment')) {
         systemProperty 'environment', project.property('environment')
     }
